[package]
name = "zktables"
version = "0.1.0"
edition = "2021"

[dependencies]
zktables-core = { path = "core" }
zktables-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.9", features = ["derive"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
