[package]
name = "zktables"
version = "0.1.0"
edition = "2021"

[dependencies]
zktables-core = { path = "core" }
zktables-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.9", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rsa = { version = "0.9.2", features = ["pem", "std"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
uuid = { version = "1.4.0", features = ["v4"] }
axum = "0.6.18"
serde_json = "1.0.99"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
