[package]
name = "zktables-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
zktables-core = { path = "../../core" }
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] }
json = "0.12"

[patch.crates-io]
crossbeam-utils = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
